# flywheel

./: .gitattributes  .gitignore  BATTLE-MAP.md  CODex_Flywheel_Experiment_Outcome_2026-07-08.md  CREDO.md  FLAGSHIP-PLAN.md  HANDOFF.md  HARNESS-ROADMAP.md  HARNESS.md  LOCAL-AGENT.md  MEMORY-SUBSTRATE.md  PROJECT.md  QUICKSTART.md  README.md  ROADMAP.md  STATE.md  SUPERAPP.md  SUPERPROJECT.md  VERIFIED-DATA-FLYWHEEL.md  WALKTHROUGH.md  artifacts_codex_dry.json  artifacts_codex_dry_easy_1task.json  artifacts_codex_dry_easy_full.json  artifacts_codex_dry_full_attempt.json  artifacts_codex_frontier_dry_easy_full.json  artifacts_codex_frontier_dry_hard_full.json  artifacts_codex_harness_dry_easy.json  artifacts_codex_live.json  artifacts_local_ollama_easy_full.json  artifacts_local_ollama_hard_full.json  artifacts_local_run_2.json  flywheel.spec  harness.cmd  m7_scorecard.json  pyproject.toml  pytest.ini  solution.py
.claude/: launch.json
.tmp-flywheel-cache/: 24395757e2327f4d.json  3d695a7429191357.json  5319cb5471a3ba08.json  929fd904c18ffbe0.json  a52850c40dfab3d6.json  b960f762833a9ff2.json  bccd2ceae865d013.json  f876bafe7cfd18a8.json
artifacts/: flywheel-local-coder-14b-benchmark-ci.md  flywheel-local-coder-14b-benchmark-m7-hard-scorecard.json  flywheel-local-coder-14b-benchmark-m7-scorecard.json  m7_summary_2026-07-08.md
benchmarks/: agentic-task-set-adapter-v1.json  agentic-task-set-implementation-plan-v1.json  agentic-task-set-v1.json  cross-harness-adapter-contract-v1.json  dry-run-preflight-command-deck-v1.json  embodied-realtime-multimodal-v1.json  forum-ledger-deep-verify-scaling-v1.json
configs/: ds_32b_actoffload.json  gather-discord-redteam-context-2026-07-09.json  gather-discord-redteam-guild-context-2026-07-09.json
dataset/: adversarial_pressure_sources_2026-07-09.json  agent_framework_sources_2026-07-09.json  allowlist.yaml  (+16 more)
(+1067 files in other folders)
